# chime-net

./: .dockerignore  Cargo.toml  Dockerfile  PROTOCOL.md  README.md  README_HARDWARE.md  RFC.txt  RING_FIX_SUMMARY.md  VIRTUAL.md  debug_ring_flow  debug_ring_flow.rs  release.sh  test_ring_fix.sh
.cargo/: config.toml
.github/workflows/: rust-ci.yml
arduino/chime_node/: README.md  chime_node.ino
examples/custom_states/: README.md
examples/custom_states/src/: main.rs
examples/http_service/: Cargo.toml
examples/http_service/src/: main.rs
examples/ringer_client/: Cargo.toml
examples/ringer_client/src/: main.rs
examples/test_client/: Cargo.toml
examples/test_client/src/: main.rs
examples/virtual_chime/: Cargo.toml
examples/virtual_chime/src/: main.rs
micropython/chime_node/: README.md  main.py
src/: audio.rs  chime.rs  lcgp.rs  lib.rs  main.rs  mqtt.rs  types.rs
