[package]
name = "chimenet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paho-mqtt = "0.12"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
cpal = "0.15"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
warp = "0.3"

[[bin]]
name = "virtual_chime"
path = "examples/virtual_chime/src/main.rs"

[[bin]]
name = "http_service"
path = "examples/http_service/src/main.rs"

[[bin]]
name = "ringer_client"
path = "examples/ringer_client/src/main.rs"

[[bin]]
name = "test_client"
path = "examples/test_client/src/main.rs"

[[bin]]
name = "custom_states"
path = "examples/custom_states/src/main.rs"
